# transcribe_ro

./: .abacus.donotdelete  .gitignore  CHANGELOG_DUAL_FILE.md  DEBUG_FLAG_IMPLEMENTATION.md  DEBUG_MODE_GUIDE.md  GUI_GUIDE.md  LICENSE  MPS_FIX_IMPLEMENTATION_SUMMARY.md  OFFLINE_TRANSLATION_GUIDE.md  PROJECT_SUMMARY.md  PYANNOTE_UPGRADE_SUMMARY.md  README (1).md  README.md  Transcribe_RO.spec  UPDATE_INSTRUCTIONS.md  config.toml  demo_debug_output.txt  device_manager.py  download_offline_models.py  examples.sh  gpu_test.py  old_transcribe_ro.py  old_transcribe_ro_gui.py  preferences.py  pyproject.toml  requirements.txt  requirements_old.txt  run_gui.bat  run_gui.command  run_gui.sh  run_transcribe.bat  run_transcribe.sh  setup_portable.bat  setup_portable.sh  test_enhancements.py  test_integration.py  transcribe_ro.py  transcribe_ro_gui.py  transcribe_ro_old.py  transcribe_ro_prebase.py
assets/: transcribe_ro.icns
documentation/: CONTRIBUTING.md  DEBUG_FLAG_COMPLETE.md  DUAL_FILE_OUTPUT_IMPLEMENTATION.md  ENHANCEMENTS_SUMMARY.md  FIX_SUMMARY.md  GPU_ACCELERATION_IMPLEMENTATION.md  GUI_FIXES_SUMMARY.md  GUI_LOCALIZATION_SUMMARY.md  GUI_TESTING.md  MPS_NAN_FIX.md  OFFLINE_TRANSLATION_IMPLEMENTATION_SUMMARY.md  PYANNOTE_UPGRADE_SUMMARY.md  QUICKSTART.md  SETUP_GUIDE.md  TESTING.md  TRANSLATION_FIX_SUMMARY.md  VERIFY_DUAL_FILE_OUTPUT.md  summary.docx
tests/: test_debug_flag.py  test_dual_file_output.py  test_gpu_acceleration.py  test_mps_fallback.py  test_offline_translation.py  test_translation.py
